--- a/code/copy_configs_to_directory.ipynb
+++ b/code/copy_configs_to_directory.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "# done = [0, 1, 8, 9, 10, 11, 13, 14, 15, 17, 18, 19, 20, 21, 22, 23, 24, 25, 28, 34, 36, 37, 38, 39, 41, 42, 43, 44, 45, 46, 47, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 70, 72, 73, 75, 76, 77, 78, 79, 81, 82, 83, 84, 85, 86, 91, 92, 93, 94, 95, 96, 98, 99]\n",
     "# numbers = list(set(list(range(0,100))) - set(done))\n",
-    "numbers = [i for i in range(80, 99)]\n",
+    "numbers = [11, 12, 13, 14, 15, 17, 19, 20, 21, 22, 24, 26, 27, 29, 34, 35, 36, 37, 38]\n",
     "# del numbers[24]\n",
     "# del numbers[72]\n",
     "window = 2\n",
