app-level update

--- a/code/descriptives_app.ipynb
+++ b/code/descriptives_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "id": "3c662f77",
    "metadata": {},
    "outputs": [],
@@ -19,17 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "id": "16d9994a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_sa = pd.read_csv('../../data/app-level/data_app.csv')"
+    "data_sa = pd.read_csv('../../data/app-level/data_app_nodrop.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "6b16f114",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "628255e5",
    "metadata": {},
    "outputs": [],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "4a9049d8",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "a066c7cb",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
        "844296"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "id": "ed28da70",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "d6087aee",
    "metadata": {},
    "outputs": [
@@ -175,41 +175,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 15,
    "id": "05f05b5f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(3, 0.5),\n",
-       " (4, 0.39),\n",
-       " (5, 0.3),\n",
-       " (6, 0.21),\n",
-       " (7, 0.16),\n",
-       " (8, 0.12),\n",
-       " (9, 0.1),\n",
-       " (10, 0.08),\n",
-       " (11, 0.06),\n",
-       " (12, 0.05),\n",
-       " (13, 0.05),\n",
-       " (14, 0.04),\n",
-       " (15, 0.03),\n",
-       " (16, 0.03),\n",
-       " (17, 0.03),\n",
-       " (18, 0.02),\n",
-       " (19, 0.02),\n",
-       " (20, 0.02)]"
+       "[(2, 0.6108769910078929),\n",
+       " (3, 0.501379847825881),\n",
+       " (4, 0.39137340458796444),\n",
+       " (5, 0.30104134095151464),\n",
+       " (6, 0.2073028890341776),\n",
+       " (7, 0.1571617063210059),\n",
+       " (8, 0.1189263007286544),\n",
+       " (9, 0.0950910581123208),\n",
+       " (10, 0.07649449955939623),\n",
+       " (11, 0.06342680765987284),\n",
+       " (12, 0.05291864464595355),\n",
+       " (13, 0.04517728379620418),\n",
+       " (14, 0.038807479841193135),\n",
+       " (15, 0.03369315974492358),\n",
+       " (16, 0.029499133005486226),\n",
+       " (17, 0.02611643309929219),\n",
+       " (18, 0.023206316268228205),\n",
+       " (19, 0.020842216473843298),\n",
+       " (20, 0.018761192757042553)]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# which percentage of sessions (RHS) contain >= than i (LHS) apps?\n",
-    "[(i+1, round(sum(session_lengths>i+1)/num_sessions, 2)) for i in range(2,20)]"
+    "[(i+1, sum(session_lengths>i+1)/num_sessions) for i in range(1,20)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1e38712e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.49918275107308335"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(328554+92904)/844296"
    ]
   },
   {
