finished app-level (no review)

--- a/code/copy_configs_to_directory.ipynb
+++ b/code/copy_configs_to_directory.ipynb
@@ -81,6 +81,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "d64dd543",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "windows = [1,2,3,4,5]\n",
+    "algo = 'gru4rec_Reminder'\n",
+    "files = []\n",
+    "for window in windows:\n",
+    "#     file = './conf/testing/app-level/multiple/' + str(algo) + '-window_' + str(window) + '.yml'\n",
+    "#     files.append(file)\n",
+    "#     file = './conf/testing/app-level/multiple/' + str(algo) + '-window_' + str(window) + '-min20.yml'\n",
+    "#     files.append(file)\n",
+    "    file = './conf/testing/app-level/multiple/' + str(algo) + '-window_' + str(window) + '-min20_test.yml'\n",
+    "    files.append(file)\n",
+    "#     file = './conf/testing_onoff/app-level/multiple/' + str(algo) + '-window_' + str(window) + '.yml'\n",
+    "#     files.append(file)\n",
+    "for f in files:\n",
+    "    shutil.copy(f, './conf/in')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0beeb0ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "algo = 'gru4rec_Reminder'\n",
+    "files = []\n",
+    "file = './conf/testing/app-level/single/' + str(algo) + '.yml'\n",
+    "files.append(file)\n",
+    "file = './conf/testing/app-level/single/' + str(algo) + '.yml'\n",
+    "files.append(file)\n",
+    "\n",
+    "for f in files:\n",
+    "    shutil.copy(f, './conf/in')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "d2df772c",
    "metadata": {},
