sequence-level analysis

--- a/code/copy_configs_to_directory.ipynb
+++ b/code/copy_configs_to_directory.ipynb
@@ -90,17 +90,15 @@
     "import shutil\n",
     "\n",
     "windows = [1,2,3,4,5]\n",
-    "algo = 'gru4rec_Reminder'\n",
+    "algo = 'hgru4rec'\n",
     "files = []\n",
     "for window in windows:\n",
-    "#     file = './conf/testing/app-level/multiple/' + str(algo) + '-window_' + str(window) + '.yml'\n",
-    "#     files.append(file)\n",
-    "#     file = './conf/testing/app-level/multiple/' + str(algo) + '-window_' + str(window) + '-min20.yml'\n",
-    "#     files.append(file)\n",
-    "    file = './conf/testing/app-level/multiple/' + str(algo) + '-window_' + str(window) + '-min20_test.yml'\n",
+    "    file = './conf/testing/sequence-level/multiple/' + str(algo) + '-window_' + str(window) + '.yml'\n",
     "    files.append(file)\n",
-    "#     file = './conf/testing_onoff/app-level/multiple/' + str(algo) + '-window_' + str(window) + '.yml'\n",
+    "#     file = './conf/testing_onoff/sequence-level/multiple/' + str(algo) + '-window_' + str(window) + '.yml'\n",
     "#     files.append(file)\n",
+    "file = './conf/testing/sequence-level/single/' + str(algo) + '.yml'\n",
+    "files.append(file)\n",
     "for f in files:\n",
     "    shutil.copy(f, './conf/in')"
    ]
@@ -128,6 +126,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "2f17e477",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = list(range(0,100))\n",
+    "e = [20,21,22,23,40,41,50,55,56,5,60,65,6,75,76,77,7,80,81,85,95]\n",
+    "numbers = list(set(l) - set(e))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "d2df772c",
    "metadata": {},
@@ -150,14 +160,12 @@
     "import os\n",
     "import shutil\n",
     "\n",
-    "# done = [0, 1, 8, 9, 10, 11, 13, 14, 15, 17, 18, 19, 20, 21, 22, 23, 24, 25, 28, 34, 36, 37, 38, 39, 41, 42, 43, 44, 45, 46, 47, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 70, 72, 73, 75, 76, 77, 78, 79, 81, 82, 83, 84, 85, 86, 91, 92, 93, 94, 95, 96, 98, 99]\n",
-    "# numbers = list(set(list(range(0,100))) - set(done))\n",
-    "numbers = [20,21,23,24,25,26,30,36,4,40,41,5]\n",
-    "# del numbers[24]\n",
-    "# del numbers[72]\n",
-    "window = 2\n",
-    "algo = 'gru4rec_Reminder'\n",
-    "files = ['./conf/tuning/app-level/multiple/' + str(algo) + '-config_' + str(i) + '-window_' + str(window) + '.yml' for i in numbers]\n",
+    "l = list(range(65,100))\n",
+    "e = [20,21,22,23,40,41,50,55,56,5,60,65,6,75,76,77,7,80,81,85,95]\n",
+    "numbers = list(set(l) - set(e))\n",
+    "window = 5\n",
+    "algo = 'hgru4rec'\n",
+    "files = ['./conf/tuning/sequence-level/multiple/' + str(algo) + '-config_' + str(i) + '-window_' + str(window) + '.yml' for i in numbers]\n",
     "for f in files:\n",
     "    shutil.copy(f, './conf/in')"
    ]
