--- a/presentation/bibliography.bib
+++ b/presentation/bibliography.bib
@@ -9,3 +9,21 @@
   year={2002},
   organization={Citeseer}
 }
+
+@misc{phonedata,
+  title={The PhoneStudy Project},
+  url={osf.io/ut42y},
+  DOI={10.17605/OSF.IO/UT42Y},
+  publisher={OSF},
+  author={Stachl, Clemens and Schoedel, Ramona and Au, Quay and V\"olkel, Sarah and Buschek, Daniel and Hussmann, Heinrich and Bischl, Bernd and B\"uhner, Markus},
+  year={2019},
+  month={Aug}
+}
+
+@inproceedings{sun2019bert4rec,
+  title={BERT4Rec: Sequential recommendation with bidirectional encoder representations from transformer},
+  author={Sun, Fei and Liu, Jun and Wu, Jian and Pei, Changhua and Lin, Xiao and Ou, Wenwu and Jiang, Peng},
+  booktitle={Proceedings of the 28th ACM international conference on information and knowledge management},
+  pages={1441--1450},
+  year={2019}
+}
