--- a/tables/results_app_multiple_cutoff_HR@1.tex
+++ b/tables/results_app_multiple_cutoff_HR@1.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrr}
 \toprule
-     model &  position <= 2 &  position > 2 &  position <= 5 &  position > 5 &  position <= 10 &  position > 10 \\
+ Algorithm &  position <= 2 &  position > 2 &  position <= 5 &  position > 5 &  position <= 10 &  position > 10 \\
 \midrule
         AR &         0.2269 &        0.1892 &         0.2082 &        0.1934 &          0.2045 &         0.1898 \\
         SR &         0.2307 &        0.2768 &         0.2514 &        0.2798 &          0.2676 &         0.2516 \\
