--- a/tables/results_app_multiple_cutoff_HR@20.tex
+++ b/tables/results_app_multiple_cutoff_HR@20.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrr}
 \toprule
-     model &  position <= 2 &  position > 2 &  position <= 5 &  position > 5 &  position <= 10 &  position > 10 \\
+ Algorithm &  position <= 2 &  position > 2 &  position <= 5 &  position > 5 &  position <= 10 &  position > 10 \\
 \midrule
         AR &         0.8834 &        0.8199 &         0.8589 &        0.8220 &          0.8570 &         0.8139 \\
         SR &         0.8864 &        0.8434 &         0.8702 &        0.8488 &          0.8717 &         0.8403 \\
