--- a/tables/results_app_multiple_min20_test.tex
+++ b/tables/results_app_multiple_min20_test.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrrrr}
 \toprule
-     model &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
+ Algorithm &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
 \midrule
         AR &     0.1890 &     0.4647 &      0.5921 &      0.7895 &  0.2964 &  0.3135 &  0.3274 &       0.1315 &         0.2349 \\
         SR &     0.1810 &     0.4747 &      0.6646 &      0.7987 &  0.2932 &  0.3176 &  0.3272 &       0.1665 &         0.1832 \\
