--- a/tables/results_app_multiple_pos_HR@20.tex
+++ b/tables/results_app_multiple_pos_HR@20.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-     model &  position = 1 &  position = 2 &  position = 3 &  position = 4 &  position = 5 &  position = 6 &  position = 7 &  position = 8 &  position = 9 &  position = 10 \\
+ Algorithm &  position = 1 &  position = 2 &  position = 3 &  position = 4 &  position = 5 &  position = 6 &  position = 7 &  position = 8 &  position = 9 &  position = 10 \\
 \midrule
         AR &        0.8732 &        0.9000 &        0.7872 &        0.8518 &        0.8482 &        0.8423 &        0.8773 &        0.8385 &        0.8518 &         0.8226 \\
         SR &        0.8808 &        0.8959 &        0.8109 &        0.8680 &        0.8743 &        0.8774 &        0.9095 &        0.8616 &        0.8736 &         0.8426 \\
