--- a/tables/results_app_multiple.tex
+++ b/tables/results_app_multiple.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrrrr}
 \toprule
-     model &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
+ Algorithm &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
 \midrule
         AR &     0.2024 &     0.5926 &      0.7250 &      0.8407 &  0.3374 &  0.3555 &  0.3637 &       0.3208 &         0.2328 \\
         SR &     0.2591 &     0.6431 &      0.7836 &      0.8568 &  0.4056 &  0.4248 &  0.4300 &       0.3552 &         0.1892 \\
