--- a/tables/results_app_multiple_cat.tex
+++ b/tables/results_app_multiple_cat.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrr}
 \toprule
-     model &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 \\
+ Algorithm &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 \\
 \midrule
         AR &     0.2224 &     0.6975 &      0.8150 &      0.9040 &  0.3890 &  0.4052 &  0.4113 \\
         SR &     0.2822 &     0.7536 &      0.8471 &      0.9074 &  0.4623 &  0.4748 &  0.4791 \\
