--- a/tables/results_app_multiple_droponoff.tex
+++ b/tables/results_app_multiple_droponoff.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrrrr}
 \toprule
-     model &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
+ Algorithm &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
 \midrule
         AR &     0.2367 &     0.6064 &      0.7282 &      0.8315 &  0.3834 &  0.3997 &  0.4071 &       0.4224 &         0.1373 \\
         SR &     0.3274 &     0.6538 &      0.7680 &      0.8583 &  0.4485 &  0.4642 &  0.4705 &       0.4482 &         0.1301 \\
