--- a/tables/results_app_multiple_min20.tex
+++ b/tables/results_app_multiple_min20.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrrrr}
 \toprule
-     model &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
+ Algorithm &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
 \midrule
         AR &     0.2265 &     0.5717 &      0.6721 &      0.7905 &  0.3648 &  0.3784 &  0.3868 &       0.6149 &         0.1840 \\
         SR &     0.3140 &     0.6303 &      0.7390 &      0.8256 &  0.4337 &  0.4482 &  0.4544 &       0.6447 &         0.1618 \\
