--- a/tables/results_app_multiple_min20_diff.tex
+++ b/tables/results_app_multiple_min20_diff.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrrrr}
 \toprule
-     model &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
+ Algorithm &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
 \midrule
         AR &    -0.0375 &    -0.1070 &     -0.0800 &     -0.0010 & -0.0684 & -0.0649 & -0.0594 &      -0.4834 &         0.0509 \\
         SR &    -0.1330 &    -0.1556 &     -0.0744 &     -0.0269 & -0.1405 & -0.1306 & -0.1272 &      -0.4782 &         0.0214 \\
