--- a/tables/results_app_multiple_pos_HR@1.tex
+++ b/tables/results_app_multiple_pos_HR@1.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-     model &  position = 1 &  position = 2 &  position = 3 &  position = 4 &  position = 5 &  position = 6 &  position = 7 &  position = 8 &  position = 9 &  position = 10 \\
+ Algorithm &  position = 1 &  position = 2 &  position = 3 &  position = 4 &  position = 5 &  position = 6 &  position = 7 &  position = 8 &  position = 9 &  position = 10 \\
 \midrule
         AR &        0.3110 &        0.0974 &        0.2257 &        0.1605 &        0.1361 &        0.1957 &        0.2116 &        0.1745 &        0.1817 &         0.1858 \\
         SR &        0.3110 &        0.1075 &        0.2657 &        0.2404 &        0.3389 &        0.3658 &        0.3363 &        0.2793 &        0.3273 &         0.2923 \\
