--- a/tables/results_app_multiple_pos_off1.tex
+++ b/tables/results_app_multiple_pos_off1.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrrrrr}
 \toprule
-     model &  position = 1 &  position = 2 &  position = 3 &  position = 4 &  position = 5 &  position = 6 &  position = 7 &  position = 8 &  position = 9 &  position = 10 \\
+ Algorithm &  position = 1 &  position = 2 &  position = 3 &  position = 4 &  position = 5 &  position = 6 &  position = 7 &  position = 8 &  position = 9 &  position = 10 \\
 \midrule
         AR &        0.8493 &        0.0016 &        0.0000 &        0.0017 &        0.0045 &        0.0082 &        0.0000 &        0.0000 &        0.0000 &         0.0000 \\
         SR &        0.8493 &        0.3231 &        0.2359 &        0.3297 &        0.4489 &        0.3644 &        0.4825 &        0.3673 &        0.3897 &         0.4217 \\
