--- a/tables/results_app_single.tex
+++ b/tables/results_app_single.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrrrr}
 \toprule
-     model &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
+ Algorithm &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
 \midrule
         AR &     0.1928 &     0.5752 &      0.7256 &      0.8432 &  0.3227 &  0.3431 &  0.3514 &       0.1794 &         0.2318 \\
         SR &     0.2400 &     0.6264 &      0.7944 &      0.8616 &  0.3953 &  0.4185 &  0.4234 &       0.2053 &         0.1879 \\
