--- a/tables/results_app_single_diff.tex
+++ b/tables/results_app_single_diff.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrrrr}
 \toprule
-     model &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
+ Algorithm &  HitRate@1 &  HitRate@5 &  HitRate@10 &  HitRate@20 &   MRR@5 &  MRR@10 &  MRR@20 &  Coverage@20 &  Popularity@20 \\
 \midrule
         AR &    -0.0096 &    -0.0174 &      0.0006 &      0.0025 & -0.0147 & -0.0124 & -0.0123 &      -0.1414 &        -0.0010 \\
         SR &    -0.0191 &    -0.0167 &      0.0108 &      0.0048 & -0.0103 & -0.0063 & -0.0066 &      -0.1499 &        -0.0013 \\
